--- a/src/main/resources/templates/CardGameCategory-template.html
+++ b/src/main/resources/templates/CardGameCategory-template.html
@@ -5,46 +5,45 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="CSS/styles.css">
     <link rel="stylesheet" href="CSS/layout.css">
-    <title>Card Games</title>
+    <title>Reviews</title>
 
 
 </head>
 <body>
-<h1>Card Games</h1>
+<h1 th:text="${category}">Table Top Games: </h1>
 <nav>
     <ul>
-        <li><a href="TableTopCategory.html">Table Top Games</a></li>
-        <li><a href="VideoGameCategory.html">Video Games</a></li>
-        <li><a href="CardGameCategory.html">Card Games</a></li>
+        <li><a href="TableTopCategory">Table Top Games</a></li>
+        <li><a href="VideoGameCategory">Video Games</a></li>
+        <li><a href="CardGameCategory">Card Games</a></li>
     </ul>
 </nav>
 
 <div class="SideBar">
     <h2>Genres</h2>
     <ul>
-        <a href="RPG.html">
+        <a href="RPG">
             <li>#RPG</li>
         </a>
-        <a href="Action.html">
+        <a href="Action">
             <li>#Action</li>
         </a>
-        <a href="Party.html">
+        <a href="Party">
             <li>#Party</li>
         </a>
-        <a href="Exploration.html">
+        <a href="Exploration">
             <li>#Exploration</li>
         </a>
     </ul>
 </div>
 
 <div class="containertt">
-    <h2>Table Top Games: </h2>
-
-    <strong> <span th:text="${CardGame.name}" style="font-family: 'Arial Narrow'">default</span></strong>
-    <p th:text="${CardGame.description}">default</p>
-    <p th:text=" '#' + ${CardGame.hashtag}"></p>
-    <hr>
-
+    <div th:each="cgame:${Cardgames}">
+        <strong> <span th:text="${cgame.name}" style="font-family: 'Arial Narrow'">default</span></strong>
+        <p th:text="${cgame.description}">default</p>
+        <p th:text=" '#' + ${cgame.hashtag}"></p>
+        <hr>
+    </div>
 </div>
 
 
