--- a/src/main/resources/templates/Party-template.html
+++ b/src/main/resources/templates/Party-template.html
@@ -13,7 +13,7 @@
         <p th:text=" '#' + ${party.hashtag}"></p>
         <hr>
     </div>
-    <a href="index.html"><button type="submit">Home</button></a>
+    <a href="/"><button type="submit">Home</button></a>
 </div>
 
 
