--- a/src/main/resources/templates/home-template.html
+++ b/src/main/resources/templates/home-template.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Dungeons & Developers</title>
-    <link rel="stylesheet" href="CSS/styles.css">
-    <link rel="stylesheet" href="CSS/layout.css">
+<!--    <link rel="stylesheet" href="CSS/styles.css">-->
+<!--    <link rel="stylesheet" href="CSS/layout.css">-->
+    <link rel="stylesheet" href="/static/CSS/styles.css">
+    <link rel="stylesheet" href="/static/CSS/layout.css">
 </head>
 <body>
 
@@ -12,9 +14,10 @@
 
 <nav>
     <ul>
-        <li><a href="TableTopCategory">Table Top Games</a></li>
-        <li> <a href="VideoGameCategory">Video Games</a></li>
-        <li><a href="CardGameCategory">Card Games</a></li>
+        <li><a href="/Category/Action">Action Games</a></li>
+        <li> <a href="/Category/RPG">RPG Games</a></li>
+        <li><a href="/Category/Exploration">Exploration Games</a></li>
+        <li><a href="/Category/Party">Party Games</a></li>
     </ul>
 </nav>
 
