updated storage and controllers

--- a/src/main/resources/templates/VideoGame-template.html
+++ b/src/main/resources/templates/VideoGame-template.html
@@ -34,6 +34,9 @@
         <a href="Exploration">
             <li>#Exploration</li>
         </a>
+        <a href="Horror">
+            <li>#Horror/Mystery</li>
+        </a>
     </ul>
 </div>
 
