--- a/src/main/resources/templates/Action-template.html
+++ b/src/main/resources/templates/Action-template.html
@@ -7,13 +7,15 @@
 </head>
 <body>
 <div class="containertt">
-    <div th:each="action:${actionTags}">
-        <strong> <span th:text="${action.name}" style="font-family: 'Arial Narrow'">default</span></strong>
-        <p th:text="${action.description}">default</p>
-        <p th:text=" '#' + ${action.hashtag}"></p>
+    <div th:each="game:${gameCategories}">
+        <strong> <span th:text="${gameCategories.name}" style="font-family: 'Arial Narrow'">default</span></strong>
+        <p th:text="${gameCategories.description}">default</p>
         <hr>
     </div>
     <a href="index.html"><button type="submit">Home</button></a>
+</div>
+<div th:each="">
+
 </div>
 
 
