--- a/src/main/resources/templates/Home-Template.html
+++ b/src/main/resources/templates/Home-Template.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Dungeons & Developers</title>
-    <link rel="stylesheet" href="CSS/styles.css">
-    <link rel="stylesheet" href="CSS/layout.css">
+    <link rel="stylesheet" th:href="@{/CSS/styles.css}"/>
+    <link rel="stylesheet" th:href="@{/CSS/layout.css}"/>
 </head>
 <body>
 
@@ -22,10 +23,10 @@
 <!-- Genre Bar -->
 
 <div class="SideBar">
-<!--    <h2>Hashtags</h2>-->
-<!--    <ul >-->
-<!--        <a href="RPG"><li>#RPG</li></a>-->
-<!--    </ul>-->
+  <!--  <h2>Hashtags</h2>
+    <ul th:each="hashtag" >
+        <a href="RPG"><li>#RPG</li></a>
+    </ul>-->
 </div>
 
 <!-- main content-->
