--- a/src/main/resources/templates/Review-template.html
+++ b/src/main/resources/templates/Review-template.html
@@ -44,6 +44,11 @@
     <p><strong th:text="${gameName}"></strong></p>
     <div th:each="rev:${review}">
     <p th:text="${rev.review}">def</p>
+
+        <div th:each="comm:${comments}">
+            <em><p th:text="${comm.comment}">com</p></em>
+        </div>
+
     <div th:each="tag:${hashtags}">
         <p th:text="${tag.name}"></p>
     </div>
@@ -57,6 +62,14 @@
     <input type="text" id="htbox" name="newHashtag"/>
     <button type="submit">Add Hashtag</button>
 </form>
+</div>
+
+<div class="containertt">
+    <form th:action="'/comment/'+${gameId}" method="POST">
+        <label for="commentbox">Enter Comment</label>
+        <input type="text" id="commentbox" name="newComment"/>
+        <button type="submit">Add Comment</button>
+    </form>
 </div>
 
 </body>
