added username function

--- a/src/main/resources/templates/Hgame-Template.html
+++ b/src/main/resources/templates/Hgame-Template.html
@@ -13,28 +13,27 @@
 
 <nav>
     <ul>
-        <li><a href="/">Home</a></li>
+        <li><a href="/Home">Home</a></li>
         <li><a href="/Games">Games</a></li>
+        <li class="user" th:text="${username}"></li>
 
     </ul>
 </nav>
 
 <div class="SideBar">
-    <!--    <h2>Genres</h2>-->
-    <!--    <ul>-->
-    <!--        <a href="RPG">-->
-    <!--            <li>#RPG</li>-->
-    <!--        </a>-->
-    <!--        <a href="Action">-->
-    <!--            <li>#Action</li>-->
-    <!--        </a>-->
-    <!--        <a href="Party">-->
-    <!--            <li>#Party</li>-->
-    <!--        </a>-->
-    <!--        <a href="Exploration">-->
-    <!--            <li>#Exploration</li>-->
-    <!--        </a>-->
-    <!--    </ul>-->
+    <ul>
+
+        <li></li>
+
+
+        <li class="user"><a href="/logout">Logout</a></li>
+
+
+        <li></li>
+
+        <li></li>
+
+    </ul>
 </div>
 
 <div class="containertt">
