--- a/src/main/resources/templates/Review-template.html
+++ b/src/main/resources/templates/Review-template.html
@@ -14,29 +14,28 @@
 
 <nav>
     <ul>
-        <li><a href="/">Home</a></li>
+        <li><a href="/Home">Home</a></li>
         <li><a href="/Games">Games</a></li>
         <li><a href="/Hashtags">Hashtags</a></li>
+        <li class="user" th:text="${username}"></li>
 
     </ul>
 </nav>
 
 <div class="SideBar">
-    <!--    <h2>Genres</h2>-->
-    <!--    <ul>-->
-    <!--        <a href="RPG">-->
-    <!--            <li>#RPG</li>-->
-    <!--        </a>-->
-    <!--        <a href="Action">-->
-    <!--            <li>#Action</li>-->
-    <!--        </a>-->
-    <!--        <a href="Party">-->
-    <!--            <li>#Party</li>-->
-    <!--        </a>-->
-    <!--        <a href="Exploration">-->
-    <!--            <li>#Exploration</li>-->
-    <!--        </a>-->
-    <!--    </ul>-->
+    <ul>
+
+        <li></li>
+
+
+        <li class="user"><a href="/logout">Logout</a></li>
+
+
+        <li></li>
+
+        <li></li>
+
+    </ul>
 </div>
 
 
@@ -46,7 +45,9 @@
     <p th:text="${rev.review}">def</p>
 
         <div th:each="comm:${comments}">
+            <p><span class="user" th:text="${username} + ' commented: '"></span></p>
             <em><p th:text="${comm.comment}">com</p></em>
+            <hr>
         </div>
 
     <div th:each="tag:${hashtags}">
