--- a/src/main/resources/templates/Hgame-Template.html
+++ b/src/main/resources/templates/Hgame-Template.html
@@ -5,52 +5,43 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" th:href="@{/CSS/styles.css}"/>
     <link rel="stylesheet" th:href="@{/CSS/layout.css}"/>
-    <title>Reviews</title>
-
-
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    <title>Dungeons & Developers</title>
 </head>
+
 <body>
 
-<nav>
-    <ul>
-        <li><a href="/Home">Home</a></li>
-        <li><a href="/Games">Games</a></li>
-        <li class="user" th:text="${username}"></li>
+    <nav>
+        <ul>
+            <li><a href="/Home">Home</a></li>
+            <li><a href="/Games">Games</a></li>
+            <li class="user" th:text="${username}"></li>
+        </ul>
+    </nav>
 
-    </ul>
-</nav>
+    <div class="SideBar">
+        <ul>
+            <li></li>
+            <li class="user"><a href="/logout">Logout</a></li>
+            <li></li>
+            <li></li>
+        </ul>
+    </div>
 
-<div class="SideBar">
-    <ul>
-
-        <li></li>
-
-
-        <li class="user"><a href="/logout">Logout</a></li>
-
-
-        <li></li>
-
-        <li></li>
-
-    </ul>
-</div>
-
-<div class="containertt">
-    <h1 th:text="${gameName}"> </h1>
-    <div th:each="hgame:${hashtagGames}">
-        <strong><p th:text="${hgame.name}" >default</p></strong></a>
+    <div class="containertt">
+        <h1 th:text="${gameName}"> </h1>
+            <div th:each="hgame:${hashtagGames}">
+            <strong><p th:text="${hgame.name}" >default</p></strong></a>
         <!--        <p th:text="${game.description}">default</p>-->
         <!--        <p th:text="${game.category}"></p>-->
-        <hr>
+            <hr>
+            </div>
     </div>
-</div>
-
-
 </body>
 
 <footer>
-    <a href="index.html">
-        <button type="submit">Home</button>
-    </a>
+    <a href="index.html"><button type="submit">Home</button></a>
+    <p>©Dungeons & Developers, LLC</p>
 </footer>
+</html>
