--- a/src/main/resources/templates/Review-template.html
+++ b/src/main/resources/templates/Review-template.html
@@ -32,6 +32,7 @@
 
     <div class="containertt">
         <p><strong th:text="${gameName}"></strong></p>
+        <p><img th:src="@{'/Images/game-images-two/'+${id} + '.jpg'}"/> </p>
                 <div th:each="rev:${review}">
                     <p th:text="${rev.review}">def</p>
 
@@ -67,7 +68,7 @@
 </body>
 
 <footer>
-    <a href="/index.html"><button type="submit">Home</button></a>
+
     <p>©Dungeons & Developers, LLC</p>
 </footer>
 </html>
