--- a/src/main/resources/static/CSS/layout.css
+++ b/src/main/resources/static/CSS/layout.css
@@ -1,10 +1,18 @@
+* {
+    margin: 0;
+}
+
+/*
 body {
+    margin: fill;
     width: 100%;
 }
+*/
 
 nav{
     position: sticky;
     top: 0;
+    width: 100%;
 }
 .landingheader{
     display: flex;
@@ -18,7 +26,6 @@ nav{
 nav ul{
     margin: 0 40px;
     display: flex;
-    width: 100%;
     justify-content: center;
 }
 
