--- a/src/main/resources/templates/Username-Template.html
+++ b/src/main/resources/templates/Username-Template.html
@@ -17,9 +17,9 @@
         </nav>
         <div class = img-container>
         <div class="containertt">
-            <p><span style="color: green"><strong>Please Login</strong></span></p>
+            <p>Please Login</strong></span></p>
             <form action="/setusername" method="POST">
-                <label for="userbox"><strong style="color: green">Enter Username: </strong></label>
+                <label for="userbox">Enter Username: </strong></label>
                 <input type="text" id="userbox" name="newUsername"/>
                 <button type="submit"><strong>Login</strong></button>
             </form>
