--- a/src/main/resources/templates/Games-Template.html
+++ b/src/main/resources/templates/Games-Template.html
@@ -11,6 +11,8 @@
 </head>
 
 <body>
+<div id="page-container">
+    <div id="content-wrap">
     <nav>
         <ul>
             <li><a href="/Home">Home</a></li>
@@ -38,11 +40,13 @@
             <hr>
         </div>
     </div>
-
+    </div>
+    <footer id="footer"><p>©Dungeons & Developers, LLC</p></footer>
+</div>
 </body>
 
-<footer>
+<!--<footer>
     <a href="index.html"><button type="submit">Home</button></a>
     <p>©Dungeons & Developers, LLC</p>
-</footer>
+</footer>-->
 </html>
