--- a/src/main/resources/templates/Hashtag-Template.html
+++ b/src/main/resources/templates/Hashtag-Template.html
@@ -11,7 +11,8 @@
 </head>
 
 <body>
-
+    <div id="page-container">
+    <div id="content-wrap">
     <nav>
         <ul>
             <li><a href="/Home">Home</a></li>
@@ -38,10 +39,15 @@
             <hr>
         </div>
     </div>
-</body>
 
+    </div>
+        <footer id="footer"><p>©Dungeons & Developers, LLC</p></footer>
+    </div>
+
+</body>
+<!--
 <footer>
     <a href="index.html"><button type="submit">Home</button></a>
     <p>©Dungeons & Developers, LLC</p>
-</footer>
+</footer>-->
 </html>
