--- a/src/main/resources/templates/Review-template.html
+++ b/src/main/resources/templates/Review-template.html
@@ -11,6 +11,8 @@
 </head>
 
 <body>
+    <div id="page-container">
+    <div id="content-wrap">
     <nav>
         <ul>
             <li><a href="/Home">Home</a></li>
@@ -63,11 +65,13 @@
             <button type="submit">Add Comment</button>
         </form>
     </div>
-
+    </div>
+    <footer id="footer"><p>©Dungeons & Developers, LLC</p></footer>
+    </div>
 </body>
 
-<footer>
+<!--<footer>
     <a href="/index.html"><button type="submit">Home</button></a>
     <p>©Dungeons & Developers, LLC</p>
-</footer>
+</footer>-->
 </html>
